# circle-haskell

./: .gitignore  Procfile  README.md  package.yaml  stack.yaml
.circle/: config.yaml
.circleci/: config.yml
app/: Main.hs
client/: app.cabal  app.nix  build.md  build.sh  default.nix  home.cabal  home.nix
client/shared/Common/: Action.hs  Model.hs  View.hs
client/shared/Templates/: LoginView.hs  login.html
client/src/: Home.hs  Main.hs
core/: App.hs  Config.hs  DB.hs  Env.hs  Handlers.hs  Lib.hs
core/App/: DSL.hs  Free.hs
core/DB/: Parser.hs
core/Handlers/: Html.hs  Json.hs  Login.hs  Reader.hs  Static.hs  Types.hs
core/Handlers/Html/: Types.hs
core/Handlers/Json/: GraphQL.hs  Helpers.hs
core/Handlers/Reader/: Helpers.hs
core/Handlers/Static/: Css.hs
core/Handlers/Static/Css/: Helper.hs
server/: Main.hs
server/Server/: Helpers.hs
shared/: API.hs
src/: Lib.hs
test/: Spec.hs
test/Spec/: Helpers.hs
