name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >= 1.0

executable app
  main-is:             Main.hs
  hs-source-dirs:      src, shared
  build-depends:       base, miso
  default-language:    Haskell2010