name:                home
version:             0.1.0.0
synopsis:            Home
category:            Web
build-type:          Simple
cabal-version:       >= 1.2

executable home
  main-is:             Home.hs
  hs-source-dirs:      src, shared
  build-depends:       base, miso, lens, aeson
  default-language:    Haskell2010